--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,17 @@
     <string name="uber_earnings">Uber Earnings</string>
     <string name="yango_earnings">Yango Earnings</string>
     <string name="private_jobs">Private Jobs</string>
+    <string name="earnings">Earnings</string>
+    <string name="provider">Provider</string>
+    <string name="card_earnings">Card Earnings</string>
+    <string name="cash_earnings">Cash Earnings</string>
+    <string name="tips">Tips</string>
+    <string name="trip_count">Trip Count</string>
+    <string name="hours_online">Hours Online</string>
+    <string name="add_provider">Add Provider</string>
+    <string name="remove_provider">Remove provider</string>
+    <string name="odometer">Odometer</string>
+    <string name="odometer_reading">Odometer: %1$s km</string>
     <string name="notes">Notes</string>
     <string name="date">Date</string>
     <string name="save">Save</string>
